--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,37 +5,25 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_album_detail">AlbumDetail</string>
     <string name="desc_album_art">Album art</string>
-    <string name="desc_album_title">Mean Something</string>
-    <string name="desc_album_artist">Kinder Than Wolves</string>
+    <string name="desc_album_title">Alas, I Cannot Swim</string>
+    <string name="desc_album_artist">Laura Marling</string>
     <string name="desc_fab">Action button</string>
     <string name="desc_sound_icon">Sound icon</string>
-    <string name="track_title">Make You Feel</string>
+    <string name="track_title">Ghosts</string>
     <string name="track_time">4:26</string>
     <string name="desc_album_thumbnail">Album art thumbnail</string>
     <string name="lyrics">
-Twinkle, twinkle, little star,\n
-How I wonder what you are!\n
-Up above the world so high,\n
-Like a diamond in the sky.\n
-\n
-When the blazing sun is gone,\n
-When he nothing shines upon,\n
-Then you show your little light,\n
-Twinkle, twinkle, all the night.\n
-\n
-Then the traveller in the dark\n
-Thanks you for your tiny sparks;\n
-He could not see which way to go,\n
-If you did not twinkle so.\n
-\n
-In the dark blue sky you keep,\n
-And often through my curtains peep,\n
-For you never shut your eye\n
-\'Till the sun is in the sky.\n
-\n
-As your bright and tiny spark\n
-Lights the traveller in the dark,\n
-Though I know not what you are,\n
-Twinkle, twinkle, little star.
+He walked down a busy street\n
+Staring solely at his feet\n
+Clutching pictures of past lovers at his side\n
+Stood at the table where she sat\n
+And removed his hat\n
+In respect of her presence\n
+Presents her with the pictures and says\n
+"These are just ghosts that broke my heart before I met you.\n
+These are just ghosts that broke my heart before I met you"\n
+Opened up his little heart\n
+Unlocked the lock that kept it dark\n
+And read a written warning...\n
     </string>
 </resources>
